--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -208,10 +208,10 @@
                                 <Label Content="Binary" FontSize="14" Margin="0,5,19,5" Grid.Row="1"/>
                                 <Button Content="Open" Width="100" HorizontalAlignment="Left" Margin="10,8,0,8" Grid.Column="1" Grid.Row="1" Click="button_BINRespiratoryAnalysis_Click" />
                                 <Label Content="From" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="0,5" HorizontalContentAlignment="Left" Grid.Column="2" Grid.Row="1"/>
-                                <mtr:NumericUpDown FontSize="14"  Margin="55,5,10,5" TextAlignment="Center" IsEnabled="{Binding IsRespBinLoaded}" Value="{Binding RespiratoryBinaryStart, Delay=700}" Minimum="1" Maximum="{Binding RespiratoryBinaryStartRecordMax}" Grid.Column="2" Grid.Row="1"/>
+                                <mtr:NumericUpDown FontSize="14"  Margin="55,5,10,5" TextAlignment="Center" IsEnabled="{Binding RespiratoryBinaryNavigationEnabled}" Value="{Binding RespiratoryBinaryStartRecord, Delay=700}" Minimum="1" Maximum="{Binding RespiratoryBinaryStartRecordMax}" Grid.Column="2" Grid.Row="1"/>
                                 <Label Content="Duration" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="0,5" HorizontalContentAlignment="Left" Grid.Column="3" Grid.Row="1"/>
-                                <mtr:NumericUpDown FontSize="14" Margin="65,5,10,5" TextAlignment="Center" IsEnabled="{Binding IsRespBinLoaded}" Value="{Binding RespiratoryBinaryDuration, Delay=700}" Minimum="1" Maximum="{Binding RespiratoryBinaryDurationMax}" Grid.Column="3" Grid.Row="1" RenderTransformOrigin="0.705,0.543"/>
-                                <TextBox Grid.Column="1" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Margin="155,5,10,5" Grid.Row="1" TextWrapping="Wrap" Text="{Binding RespiratoryBinaryMaxEpochs, Mode=OneWay}" IsEnabled="{Binding IsRespBinLoaded}" IsReadOnly="true"/>
+                                <mtr:NumericUpDown FontSize="14" Margin="65,5,10,5" TextAlignment="Center" IsEnabled="{Binding RespiratoryBinaryNavigationEnabled}" Value="{Binding RespiratoryBinaryDuration, Delay=700}" Minimum="1" Maximum="{Binding RespiratoryBinaryDurationMax}" Grid.Column="3" Grid.Row="1"/>
+                                <TextBox Grid.Column="1" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Margin="155,5,10,5" Grid.Row="1" TextWrapping="Wrap" Text="{Binding RespiratoryBinaryMaxEpochs, Mode=OneWay}" IsReadOnly="true"/>
                                 <Label Content="Max" FontSize="14" Margin="115,5,0,5" HorizontalContentAlignment="Left" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Width="39"/>
                                 <!-- From EDF -->
                                 <Label Content="EDF" FontSize="14" Margin="0,5,19,5" Grid.Row="2"/>
@@ -224,7 +224,7 @@
 
                                 <!-- Export -->
                                 <Label Content="Export" FontSize="18" Height="35" VerticalAlignment="Top" HorizontalAlignment="Left" Width="112" Grid.Column="4" Margin="9,2,0,0" Grid.RowSpan="2"/>
-                                <Button Content="Export" IsEnabled="{Binding RespiratorySignalPlotExists}" Click="button_ExportRespiratoryPlotClick" Grid.Column="4" Margin="10,6" Grid.Row="1"/>
+                                <Button Content="Export" IsEnabled="{Binding RespiratoryAnalysisEnabled}" Click="button_ExportRespiratoryPlotClick" Grid.Column="4" Margin="10,6" Grid.Row="1"/>
                             </Grid>
 
                             <Label Content="Plot" FontSize="18" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10,130,0,0"/>
@@ -251,7 +251,7 @@
                                 <Label Content="Analysis" FontSize="18" Height="35" VerticalAlignment="Top" HorizontalAlignment="Left" Width="314" Grid.ColumnSpan="6"/>
                                 <!-- Epoch Selection -->
                                 <Label Content="Epoch" Height="33" VerticalAlignment="Top" Grid.Row="1" RenderTransformOrigin="0.42,1.061" Margin="0,3,0,0"/>
-                                <ComboBox SelectedValue="{Binding RespiratoryAnalyticsSelectedEpoch}" ItemsSource="{Binding RespiratoryAnalyzedEpochs}" IsEnabled="{Binding RespiratorySignalPlotExists}" Grid.ColumnSpan="2" Grid.Column="1" Height="33" VerticalAlignment="Top" Grid.Row="1" Margin="0,3,1,0"/>
+                                <ComboBox SelectedValue="{Binding RespiratoryAnalyticsSelectedEpoch}" ItemsSource="{Binding RespiratoryAnalyzedEpochs}" IsEnabled="{Binding RespiratoryAnalysisEnabled}" Grid.ColumnSpan="2" Grid.Column="1" Height="33" VerticalAlignment="Top" Grid.Row="1" Margin="0,3,1,0"/>
                                 <!-- Label Column -->
                                 <Label Content="Mean" HorizontalAlignment="Left" Margin="0,33,0,0" VerticalAlignment="Top" Grid.Row="2" Height="29" Width="45" RenderTransformOrigin="0.044,0.483"/>
                                 <Label Content="% Var" HorizontalAlignment="Left" Margin="0,62,0,0" VerticalAlignment="Top" Grid.Row="2" Height="29" Width="45"/>
@@ -286,8 +286,8 @@
                             </Grid>
 
                             <mtr:ProgressRing IsActive="{Binding RespiratoryProgressRingEnabled}" Grid.ColumnSpan="2" />
-                            <ToggleButton Content="CONSTANT AXIS" Margin="0,135,10,0" IsEnabled="{Binding RespiratorySignalPlotExists}" IsChecked="{Binding RespiratoryUseConstantAxis}" VerticalAlignment="Top" HorizontalAlignment="Right" Width="100" Height="34"/>
-                            <ToggleButton Content="SHOW ANALYTICS" Margin="0,135,115,0" IsEnabled="{Binding RespiratorySignalPlotExists}" IsChecked="{Binding RespiratoryDisplayAnalytics}" VerticalAlignment="Top" HorizontalAlignment="Right" Width="100" Height="34"  Checked="button_DisplayAnalytics_Checked" Unchecked="button_DisplayAnalytics_Checked"/>
+                            <ToggleButton Content="CONSTANT AXIS" Margin="0,135,10,0" IsEnabled="{Binding RespiratoryAnalysisEnabled}" IsChecked="{Binding RespiratoryUseConstantAxis}" VerticalAlignment="Top" HorizontalAlignment="Right" Width="100" Height="34"/>
+                            <ToggleButton Content="SHOW ANALYTICS" Margin="0,135,115,0" IsEnabled="{Binding RespiratoryAnalysisEnabled}" IsChecked="{Binding RespiratoryDisplayAnalytics}" VerticalAlignment="Top" HorizontalAlignment="Right" Width="100" Height="34"  Checked="button_DisplayAnalytics_Checked" Unchecked="button_DisplayAnalytics_Checked"/>
                         </Grid>
                     </mtr:MetroTabItem>
                     <mtr:MetroTabItem Header="EEG" HorizontalAlignment="Left" Margin="0,0,-0.333,0" Width="55" Height="41" VerticalAlignment="Top">
