--- a/SleepApneaAnalysisTool/SleepApneaAnalysisTool/MainWindow.xaml
+++ b/SleepApneaAnalysisTool/SleepApneaAnalysisTool/MainWindow.xaml
@@ -313,7 +313,7 @@
                                 <!-- From Binary -->
                                 <Label Content="Binary" FontSize="14" Margin="0,5,20,5" Grid.Row="1"/>
                                 <Button Content="Open" Width="100" HorizontalAlignment="Left" Margin="10,8,0,8" Grid.Column="1" Grid.Row="1" Click="button_BINEEGAnalysis_Click" />
-                                <TextBox x:Name="textBox" Grid.Column="1" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Margin="155,5,10,5" Grid.Row="1" TextWrapping="Wrap" Text="{Binding EEGBinaryMaxEpoch}" IsEnabled="{Binding IsEEGBinaryLoaded}" IsReadOnly="true"/>
+                                <TextBox x:Name="textBox" Grid.Column="1" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Margin="155,5,10,5" Grid.Row="1" TextWrapping="Wrap" Text="{Binding EEGBinaryMaxEpoch}" IsReadOnly="true"/>
                                 <Label Content="Max" FontSize="14" Margin="115,5,0,5" HorizontalContentAlignment="Left" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Width="39"/>
                                 <Label Content="Epoch" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="0,5,0,5" HorizontalContentAlignment="Left" Grid.Column="2" Grid.Row="1"/>
                                 <mtr:NumericUpDown FontSize="14"  Margin="55,5,10,5" TextAlignment="Center" IsEnabled="{Binding IsEEGBinaryLoaded}" Value="{Binding EEGEpochForAnalysisBinary}" Minimum="1" Grid.Column="2" Grid.Row="1"/>
@@ -360,10 +360,9 @@
                     <mtr:MetroTabItem Header="Coherence">
                         <Grid Name="TabItem_Coherence">
                             <Grid>
-                                <Grid Height="170" VerticalAlignment="Top" Margin="10,0,0,0">
+                                <Grid Height="125" VerticalAlignment="Top" Margin="10,0,0,0">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="35"/>
-                                        <RowDefinition Height="45"/>
                                         <RowDefinition Height="45"/>
                                         <RowDefinition Height="45"/>
                                     </Grid.RowDefinitions>
@@ -379,18 +378,18 @@
                                     <Label Content="Plot Options" FontSize="18" Width="200" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="2"/>
                                     <!-- From Binary -->
                                     <!-- From EDF -->
-                                    <Label Content="EDF" FontSize="14" Margin="0,5,20,0" Grid.Row="2"/>
-                                    <Label Content="Signal 1" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="10,5,0,0" Grid.Column="1" Grid.Row="2"/>
-                                    <ComboBox Margin="79.667,4.333,9.667,4.667" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding CoherenceEDFSelectedSignal1}" Grid.Column="1" Grid.Row="2"/>
-                                    <Label Content="Signal 2" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="10,5,0,-31" Grid.Column="1" Grid.Row="3"/>
-                                    <ComboBox Margin="79.667,5.333,9.667,5" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding CoherenceEDFSelectedSignal2}" Grid.Column="1" Grid.Row="3"/>
-                                    <Label Content="From" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" Grid.Column="2" Grid.Row="2"/>
-                                    <mtr:NumericUpDown Margin="77,5,10,5" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFStartRecord, Delay=700}" Minimum="{Binding CoherenceEDFStartRecordMin}" Maximum="{Binding CoherenceEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
-                                    <Label Content="Duration" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" Grid.Column="2" Grid.Row="3"/>
-                                    <mtr:NumericUpDown Margin="77,5,10,5" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFDuration, Delay=700}" Minimum="{Binding CoherenceEDFDurationMin}" Maximum="{Binding CoherenceEDFDurationMax}" Grid.Column="2" Grid.Row="3"/>
+                                    <Label Content="EDF" FontSize="14" Margin="0,5,20,0" Grid.Row="1"/>
+                                    <Label Content="Signal 1" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="10,5,0,0" Grid.Column="1" Grid.Row="1"/>
+                                    <ComboBox Margin="80,4,10,5" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding CoherenceEDFSelectedSignal1}" Grid.Column="1" Grid.Row="1"/>
+                                    <Label Content="Signal 2" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="10,5,0,-31" Grid.Column="1" Grid.Row="2"/>
+                                    <ComboBox Margin="80,5,10,5" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding CoherenceEDFSelectedSignal2}" Grid.Column="1" Grid.Row="2"/>
+                                    <Label Content="From" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" Grid.Column="2" Grid.Row="1"/>
+                                    <mtr:NumericUpDown Margin="77,5,10,5" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFStartRecord, Delay=700}" Minimum="{Binding CoherenceEDFStartRecordMin}" Maximum="{Binding CoherenceEDFStartRecordMax}" Grid.Column="2" Grid.Row="1"/>
+                                    <Label Content="Duration" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" Grid.Column="2" Grid.Row="2"/>
+                                    <mtr:NumericUpDown Margin="77,5,10,5" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFDuration, Delay=700}" Minimum="{Binding CoherenceEDFDurationMin}" Maximum="{Binding CoherenceEDFDurationMax}" Grid.Column="2" Grid.Row="2"/>
                                 </Grid>
 
-                                <Grid Margin="10,175,10,0">
+                                <Grid Margin="10,140,10,0">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="300*"/>
                                         <ColumnDefinition Width="300*"/>
