--- a/SleepApneaAnalysisTool/SleepApneaAnalysisTool/Dialog_Export_Previewed_Signals.xaml
+++ b/SleepApneaAnalysisTool/SleepApneaAnalysisTool/Dialog_Export_Previewed_Signals.xaml
@@ -1,4 +1,4 @@
-﻿<mtr:MetroWindow x:Class="SleepApneaAnalysisTool.Dialog_Export_Previewed_Signals"
+﻿<Dialog:CustomDialog x:Class="SleepApneaAnalysisTool.Dialog_Export_Previewed_Signals"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,17 +6,17 @@
         xmlns:local="clr-namespace:SleepApneaAnalysisTool"
         mc:Ignorable="d"
         xmlns:mtr="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Export Selected Signals" Height="342.558" Width="506.481">
-  <Grid>
-    <TextBox x:Name="textBox_subject_id" HorizontalAlignment="Left" Height="38" Margin="25,54,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="440" FontSize="10"/>
-    <TextBox x:Name="textBox_epochs_from" HorizontalAlignment="Left" Height="28" Margin="28,190,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="71"/>
-    <TextBox x:Name="textBox_epochs_to" HorizontalAlignment="Left" Height="28" Margin="136,190,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="71"/>
-    <Button x:Name="button_export_finish" Content="Finish" HorizontalAlignment="Left" Height="43" Margin="375,249,0,0" VerticalAlignment="Top" Width="91" FontSize="14" Background="LightBlue" Click="button_export_finish_Click"/>
-    <Button x:Name="button_export_cancel" Content="Cancel" HorizontalAlignment="Left" Height="43" Margin="259,249,0,0" VerticalAlignment="Top" Width="91" FontSize="14" Background="IndianRed" Click="button_export_cancel_Click"/>
-    <Label x:Name="label_subject_id" Content="Enter subject ID (two digits)" HorizontalAlignment="Left" Height="31" Margin="25,18,0,0" VerticalAlignment="Top" Width="195" FontSize="14"/>
-    <Label x:Name="label_epochs_from" Content="From" HorizontalAlignment="Left" Height="28" Margin="28,147,0,0" VerticalAlignment="Top" Width="84" FontSize="12" RenderTransformOrigin="0.472,1.404"/>
-    <Label x:Name="label_epochs_length" Content="Length" HorizontalAlignment="Left" Height="28" Margin="136,147,0,0" VerticalAlignment="Top" Width="84" FontSize="12"/>
-    <Label x:Name="label_epochs" Content="Select Epochs" HorizontalAlignment="Left" Height="31" Margin="25,111,0,0" VerticalAlignment="Top" Width="96" FontSize="14"/>
-
-  </Grid>
-</mtr:MetroWindow>
+        xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"           
+        Title="Add Derivative">
+    <Grid Height="280">
+        <TextBox x:Name="textBox_subject_id" Height="28" Margin="10,31,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" FontSize="10"/>
+        <TextBox x:Name="textBox_epochs_from" Height="28" Margin="10,123,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBox_epochs_to" Height="28" Margin="10,184,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+        <Button x:Name="button_export_finish" Content="OK" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Click="button_export_finish_Click" Margin="0,0,90,10"/>
+        <Button x:Name="button_export_cancel" Content="Cancel" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Click="button_export_cancel_Click" Margin="0,0,10,10"/>
+        <Label x:Name="label_subject_id" Content="Enter subject ID (two digits)" HorizontalAlignment="Left" Height="31" VerticalAlignment="Top" Width="195" FontSize="14"/>
+        <Label x:Name="label_epochs_from" Content="From" HorizontalAlignment="Left" Height="28" Margin="10,95,0,0" VerticalAlignment="Top" Width="84" FontSize="12" RenderTransformOrigin="0.472,1.404"/>
+        <Label x:Name="label_epochs_length" Content="Duration" HorizontalAlignment="Left" Height="28" Margin="10,156,0,0" VerticalAlignment="Top" Width="84" FontSize="12"/>
+        <Label x:Name="label_epochs" Content="Select Epochs" HorizontalAlignment="Left" Height="31" Margin="0,64,0,0" VerticalAlignment="Top" Width="96" FontSize="14"/>
+    </Grid>
+</Dialog:CustomDialog>
